feat: 抽取各子服务实体类至model层，为各子服务初始化Web架构，使用RestTemplate实现order与product间的通信

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <description>springcloud-learning</description>
     <modules>
         <module>services</module>
+        <module>model</module>
     </modules>
     <packaging>pom</packaging>
 
