feat: 使用nacos配置中心管理order服务配置文件

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -30,6 +30,13 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <!--springcloud alibaba 注册中心-配置管理-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+
         <!--Openfeign-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
