--- a/services/service-product/src/main/resources/application.properties
+++ b/services/service-product/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=service-product
 server.port=9000
 
 spring.cloud.nacos.server-addr=127.0.0.1:8848
+
+# ??nacos????????
+spring.cloud.nacos.config.import-check.enabled=false
