--- a/services/service-order/src/main/resources/application.yml
+++ b/services/service-order/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
         server-addr: 127.0.0.1:8848
         namespace: SpringCloud-Learning-${spring.profiles.active}
 
+logging:
+  level:
+    edu.wust.qrz.feign: debug
+
 ---
 spring:
   config:
