feat: Sentinel实现资源限流并自定义异常处理

--- a/services/service-order/src/main/resources/application.yml
+++ b/services/service-order/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   profiles:
     active: dev
-    include: feign
+    include: feign, sentinel
   application:
     name: service-order
   cloud:
