feat: 自定义Vip断言工厂

--- a/gateway/src/main/resources/application-route.yml
+++ b/gateway/src/main/resources/application-route.yml
@@ -10,3 +10,13 @@ spring:
           uri: lb://service-product
           predicates:
             - Path=/api/services/product/**
+
+        - id: bing-route
+          uri: https://www.bing.com
+          predicates:
+            - Path=/search/**
+            - name: Query
+              args:
+                param: q
+                regexp: test
+            - Vip=user, qrz
