--- a/gateway/src/main/resources/application-route.yml
+++ b/gateway/src/main/resources/application-route.yml
@@ -6,17 +6,19 @@ spring:
           uri: lb://service-order
           predicates:
             - Path=/api/services/order/**
+          filters:
+            - RewritePath=/api/services/?(?<segment>.*), /$\{segment}
+
         - id: product-route
           uri: lb://service-product
           predicates:
             - Path=/api/services/product/**
+          filters:
+            - RewritePath=/api/services/?(?<segment>.*), /$\{segment}
 
         - id: bing-route
           uri: https://www.bing.com
           predicates:
             - Path=/search/**
-            - name: Query
-              args:
-                param: q
-                regexp: test
+            - Query=q,test
             - Vip=user, qrz
