--- a/services/pom.xml
+++ b/services/pom.xml
@@ -15,6 +15,10 @@
     <modules>
         <module>service-product</module>
         <module>service-order</module>
+        <module>seata-account</module>
+        <module>seata-business</module>
+        <module>seata-order</module>
+        <module>seata-storage</module>
     </modules>
 
     <properties>
